# llm-breakdown

./: README.md  pyproject.toml
src/llm_breakdown/: attention.py  embeddings.py  logits.py  main.py  mlp.py  tokenization.py  transformer.py
