[project]
name = "llm-breakdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=6.33.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]
